<resources>
    <string name="app_name">ST109_PDF_Reader</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer\n</string>
    <string name="fill_out_text_field">Fill out textfiled</string>
    <string name="okay">okay\n</string>
    <string name="choose_value">Choose value</string>
    <string name="enter_password">Enter password</string>
    <string name="not_supported">Not supported</string>
    <string name="searching_">Search</string>
    <string name="text_not_found">Text not found</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="dismiss">dismiss\n</string>
    <string name="go_to_setting_title">Permission settings</string>
    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="go_to_storage_setting_message">The app needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancel1">Cancel</string>
    <string name="settings">Settings</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="english">English</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">Language</string>

    <string name="title_1">Manage All Formate In One</string>
    <string name="title_2">Read PDF Anywhere, Anytime</string>
    <string name="title_3">Quickly Search Your Files</string>

    <string name="content_1">Beyond your imagination </string>
    <string name="content_2">Choose topic you like</string>
    <string name="content_3">Make a difference</string>

    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="continue_per">Continue</string>
    <string name="notification">Notification</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="denied_notification">Notification permission denied</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="denied_storage">Storage permission denied</string>
    <string name="reject_access">Please grant storage permission to use the application</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>

    <string name="rate_us_ed">You\'ve already voted!</string>
    <string name="one_start_title">Oh, no!</string>
    <string name="four_start_title">We love you too!</string>
    <string name="zero_star_title">Do you like the app?</string>
    <string name="one_start">Please give us some feedback</string>
    <string name="four_start">Thanks for your feedback</string>
    <string name="zero_star">Let us know your experience</string>
    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>

    <string name="not_yet_rate">Please select number of stars</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="share_all">Share all</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="view">View</string>
    <string name="select_all">Select all</string>
    <string name="no_item_is_here">No item is here</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait_a_minute">Wait a minute…</string>
    <string name="loading">Loading</string>
    <string name="no_internet">No internet</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="file_error">Cannot select file. Please use another link</string>
    <string name="this_app_needs_read_storage_permission_to_use_all_functions">This app needs read storage permission to use all functions</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="bookmark">Bookmark</string>
    <string name="saved">Saved</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="scan_text_to_pdf">Scan Text To PDF</string>
    <string name="easily_create_pdf_files_by_scanning_camera">Easily create pdf files by scanning camera</string>
    <string name="create">Create >></string>
    <string name="all_count">All (%d)</string>
    <string name="all_file_count">All Files (%d)</string>
    <string name="word_count">Word (%d)</string>
    <string name="excel_count">Excel (%d)</string>
    <string name="ppt_count">PPT (%d)</string>
    <string name="pdf_count">PDF (%d)</string>

    <string name="all">All</string>
    <string name="word">Word</string>
    <string name="excel">Excel</string>
    <string name="ppt">PPT</string>
    <string name="pdf">PDF</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rename">Rename</string>
    <string name="sort_by_name_a_z">Sort by name A → Z</string>
    <string name="sort_by_name_z_a">Sort by name Z → A</string>
    <string name="sort_by_date_old_new">Sort by date Old → New</string>
    <string name="sort_by_date_new_old">Sort by date New → Old</string>
    <string name="no_result_found">No Result Found</string>
    <string name="file_not_exist">File not exist!</string>
    <string name="content_file_not_exist">file not exist!</string>
    <string name="please_choose_a_file">Please choose a file</string>
    <string name="do_you_want_to_delete_this_file">Do you want to delete this file?</string>
    <string name="do_you_want_to_remove_this_file_from_recent">Do you want to remove this file from recent?</string>
    <string name="the_app_need_read_storage_permission">The app need read storage permission</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="search_file">Search file...</string>
    <string name="no_item_here">No Item Here</string>

    <string name="count_item_selected">%d item selected</string>
    <string name="clear_all">Clear All</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">From Gallery</string>
    <string name="replace">Replace</string>
    <string name="cutout">Cutout</string>
    <string name="filter">Filter</string>
    <string name="create_pdf">Create PDF</string>
    <string name="apply_for_all_page">Apply for all page</string>

    <string name="please_select_text">Please select text!</string>
    <string name="please_draw_anything">Please draw anything!</string>
    <string name="copied_to_clipboard">Copied to clipboard!</string>
    <string name="highlight">Highlight</string>
    <string name="draw">Draw</string>
    <string name="please_select_the_text_then_press_the_button_to_highlight">Please select the text then press the button to highlight</string>
    <string name="save_file">Save File</string>
    <string name="enter_file_name">Enter file name...</string>
    <string name="search_page">Search Page</string>
    <string name="enter_page_number">Enter page number...</string>
    <string name="name_already_exists">%s already exists</string>
    <string name="path_success">Path: %s</string>
    <string name="type_reader">%s Reader</string>
    <string name="save_success_to_my_pdf">Save success to My PDF</string>
    <string name="save_fail">Save fail</string>
    <string name="please_input_text">Please input text</string>
    <string name="successful">Successful</string>
    <string name="scan_from_camera">Scan From Camera</string>
    <string name="scan_from_gallery">Scan From Gallery</string>
    <string name="unable_to_recognize_letters">Unable to recognize letters</string>
    <string name="error_creating_file">Error creating file</string>
    <string name="all_file">All File</string>
    <string name="new_name_already_exists">New name already exists</string>
    <string name="rename_failed_please_try_again">Rename failed, please try again</string>
</resources>