<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_10_pdf"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/black_2D"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/do_you_want_to_remove_this_file_from_recent"
                    android:textColor="#4E4E4E"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnNo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_8_stroke_gradient_solid_white"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:paddingVertical="8dp"
                        android:text="@string/no"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/btnYes"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_8_gradient_ver"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:paddingVertical="8dp"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>