<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_28_top_solid_white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/img_permission" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="14dp"
                android:fontFamily="@font/roboto_italic"
                android:gravity="center"
                android:text="@string/this_app_needs_read_storage_permission_to_use_all_functions"
                android:textColor="@color/black_2D"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="20dp"
                android:background="#F1F5F5"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="6"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start|center_vertical"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/the_app_need_read_storage_permission"
                    android:textColor="@color/black_2D"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btnGoToSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/bg_8_gradient_ver"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="12dp"
                    android:text="@string/go_to_settings"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>