<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.HomeFragment">

    <!-- btnCreate -->
    <LinearLayout
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_10_gradient_ver"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/scan_text_to_pdf"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_italic"
                android:text="@string/easily_create_pdf_files_by_scanning_camera"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="5dp">

                    <TextView
                        android:id="@+id/tvCreate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="8dp"
                        android:text="@string/create"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"

                android:adjustViewBounds="true"
                android:src="@drawable/img_create" />
        </FrameLayout>
    </LinearLayout>

    <!-- rcvTypeHome -->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swrTypeHome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreate">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvTypeHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="14dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:itemCount="5"
            tools:listitem="@layout/item_home" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <!-- btnAdd -->
    <ImageView
        android:id="@+id/btnAdd"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/viewOutsizeAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true" />

    <LinearLayout
        android:id="@+id/layoutMoreOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/bg_10_pdf"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="@+id/btnAdd">

        <!-- btnCamera -->
        <LinearLayout
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imvCamera"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_camera" />

            <TextView
                android:id="@+id/tvCamera"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/from_camera"
                android:textColor="@color/black_2D"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- btnGallery -->
        <LinearLayout
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imvGallery"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_gallery" />

            <TextView
                android:id="@+id/tvGallery"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/from_gallery"
                android:textColor="@color/black_2D"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>