<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layoutParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_10_pdf"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp">

        <!-- btnOpenFile -->
        <LinearLayout
            android:id="@+id/btnOpenFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imvOpenFile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_open_pop" />

            <TextView
                android:id="@+id/tvOpenFile"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/open_file"
                android:textColor="@color/black_2D"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- btnRename -->
        <LinearLayout
            android:id="@+id/btnRename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imvRename"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_rename_pop" />

            <TextView
                android:id="@+id/tvRename"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/rename"
                android:textColor="@color/black_2D"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- btnShare -->
        <LinearLayout
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imvShare"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_share_pop" />

            <TextView
                android:id="@+id/tvShare"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/share"
                android:textColor="@color/black_2D"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- btnDelete -->
        <LinearLayout
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imvDelete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_delete_pop" />

            <TextView
                android:id="@+id/tvDelete"
                style="@style/single_marquee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/delete"
                android:textColor="@color/black_2D"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>